--- a/app/_sass/base/_vars.scss
+++ b/app/_sass/base/_vars.scss
@@ -21,6 +21,7 @@ $color--background-2: #EEE2DC;
 
 /* Screen sizes (width) */
 
+$width--xsm: 360px;
 $width--sm: 640px;
 $width--md: 768px;
 $width--lg: 1024px;
